Tweak the way we log to be even more obvious that issue is coming from logging